avformat/mpegts: Use DVB_TELETEXT timestamp heuristic also for DVB subtitles

Fixes Ticket4200

Signed-off-by: Michael Niedermayer <michael@niedermayer.cc>